src/test/custom/valid/overload/overloadArray.wacc
# Output:
# 1
# 1

# Program:

begin
  int foo(int[] a) is return a[0] end
  int foo(int[][] a) is return a[0][0] end

  int[] a = [1];
  int[][] b = [a];
  int x = call foo(a);
  int y = call foo(b);
  println x;
  println y
end