src/test/custom/invalid/overload/overloadEmpty.wacc
# Output:
# #semantic error#

# Program:

begin
  struct a is {int i}
  struct b is {int i}
  int foo(a x) is return 1 end
  int foo(b y) is return 1 end

  int a = call foo(empty)
end